terraform-digitalplatform-blue-green/files/artifacts/production/Blue/pub-alb-ingress-digital-core-01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig":{ "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-southeast-1:920971364038:certificate/42df3545-ae1c-4855-8da7-6e24d9a78d98
    alb.ingress.kubernetes.io/group.name: pub-digitalcore-prod
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-03e9e87ad40ed1ad5, subnet-0cd600f566b377174, subnet-0e94d925e1b683767
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=digital-platforms-bg-b-alb-logs,access_logs.s3.prefix=production/blue/alb/pub-alb-ingress-digital-core-01
    kubernetes.io/ingress.class: alb
  name: pub-alb-ingress-digital-core-01
  namespace: alb-prod
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: ssl-redirect
            port:
              name: use-annotation
        path: /*
        pathType: ImplementationSpecific
      - backend:
          service:
            name: nginx-svc
            port:
              number: 80
        path: /loadpage/*
        pathType: ImplementationSpecific
